<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >

    <LinearLayout
        android:id="@+id/activity_register_linContainer1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/activity_register_edtFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/activity_register_firstname"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <EditText
                android:id="@+id/activity_register_edtLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/activity_register_lastname"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </LinearLayout>

        <EditText
            android:id="@+id/activity_register_edtEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/activity_register_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <EditText
            android:id="@+id/activity_register_edtPhoneNo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/activity_register_phoneNo"
            android:inputType="textPhonetic"
            android:singleLine="true" />

        <EditText
            android:id="@+id/activity_register_edtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/activity_register_password"
            android:inputType="textPassword"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_register_linContainer1"
		android:layout_centerHorizontal="true"        
        android:onClick="onClickRegister"
        android:layout_marginTop="20dp"
        android:text="@string/activity_register_btnRegister" />

</RelativeLayout>