<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:padding="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_send_message_txtMessage"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/activity_send_message_edtMessage"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_send_message_txtStoreDetail"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/activity_send_message_edtStoreDetail"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/activity_send_message_btnSend"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClickSend"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/activity_send_message_btnSend" />

</LinearLayout>